# IS601_Module13

./: .env.example  .gitignore  Dockerfile  README.md  REFLECTION.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: __init__.py  database.py  factory.py  main.py  models.py  schemas.py  security.py
static/: login.html  register.html
static/css/: style.css
static/js/: auth.js
tests/: test_calculations.py  test_e2e.py  test_integration.py  test_schemas.py  test_security.py
